@@ -1,0 +1,50 @@
+ChangeLog
+Makefile
+README
+VERSION
+metaconfig
+pre-distclean.rb
+setup.rb
+doc/api.en.html
+doc/api.en.rd
+doc/api.ja.html
+doc/api.ja.rd
+doc/manual.css
+ext/oci8/MANIFEST
+ext/oci8/attr.c
+ext/oci8/bind.c
+ext/oci8/env.c
+ext/oci8/error.c
+ext/oci8/extconf.rb
+ext/oci8/lob.c
+ext/oci8/metadata.c
+ext/oci8/oci8.c
+ext/oci8/oci8.h
+ext/oci8/oci8lib.c
+ext/oci8/ocidatetime.c
+ext/oci8/ocinumber.c
+ext/oci8/oraconf.rb
+ext/oci8/oradate.c
+ext/oci8/oranumber.c
+ext/oci8/post-config.rb
+ext/oci8/rowid.c
+ext/oci8/stmt.c
+ext/oci8/extconf.h
+lib/oci8.rb.in
+lib/DBD/OCI8/OCI8.rb
+lib/oci8/compat.rb
+lib/oci8/interval.rb
+lib/oci8/metadata.rb
+lib/oci8/oci8.rb
+test/README
+test/config.rb
+test/test_all.rb
+test/test_bind_raw.rb
+test/test_bind_time.rb
+test/test_break.rb
+test/test_clob.rb
+test/test_dbi.rb
+test/test_dbi_clob.rb
+test/test_oci8.rb
+test/test_oradate.rb
+test/test_oranumber.rb
