@@ -1,4 +1,0 @@
-Makefile
-mkmf.log
-extconf.h
-depend
