@@ -1,3 +1,10 @@
+2006-07-21  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/bind.c, ext/oci8/stmt.c,
+	    lib/oci8/oci8.rb: Support LONG and LONG RAW longer than 65535 bytes.
+	    Add OCI8#long_read_len and OCI8#long_read_len= to set max long
+	    length.
+	* ext/oci8/oraconf.rb: fix typo.
+
 2006-07-20  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oci8.h, ext/oci8/rowid.c, ext/oci8/oci8lib.c: change
 	    Rowid's internal structure when OCIRowidToChar is available.
